Add filter logic in server
